@@ -66,5 +66,5 @@ tarball is:
   libdpkg-dev
   libxmltok1-dev
 
-The build process is done by running the usual «./configure; make».
+The build process is done by running the usual «./configure; make check».
 To see all available configuration options please run «./configure --help».
