@@ -1,0 +1,4 @@
+atconfig
+atlocal
+package.m4
+testsuite
