@@ -1,0 +1,14 @@
+# Global shell definitions for the autotest test suite
+
+PATH="@abs_top_builddir@/src:$PATH"
+export PATH
+
+# Setup a sane environment
+LC_ALL=C
+export LC_ALL
+
+TZ=UTC
+export TZ
+
+# Define helper variables and functions
+TESTDATA="@abs_top_srcdir@/test"
